Implemented JWT authentication, Role Based Access, user-specific analytics, budget management, and Excel export features.